got transient solver holding SS again

--- a/docs/source/pythonapi/examples/mgxs-part-i.ipynb
+++ b/docs/source/pythonapi/examples/mgxs-part-i.ipynb
@@ -395,11 +395,19 @@
    },
    "outputs": [],
    "source": [
+    "# Instantiate a tally Mesh\n",
+    "mesh = openmc.Mesh(mesh_id=1)\n",
+    "mesh.type = 'regular'\n",
+    "mesh.dimension = [2, 2]\n",
+    "mesh.lower_left  = [-0.63, -0.63]\n",
+    "mesh.upper_right = [+0.63, +0.63]\n",
+    "\n",
     "# Instantiate a few different sections\n",
     "total = mgxs.TotalXS(domain=cell, groups=groups)\n",
     "absorption = mgxs.AbsorptionXS(domain=cell, groups=groups)\n",
     "scattering = mgxs.ScatterXS(domain=cell, groups=groups)\n",
-    "dif_coef = mgxs.DiffusionCoefficient(domain=cell, groups=groups)"
+    "dif_coef = mgxs.DiffusionCoefficient(domain=cell, groups=groups)\n",
+    "current = mgxs.Current(domain=mesh, groups=groups)"
    ]
   },
   {
@@ -419,22 +427,14 @@
     {
      "data": {
       "text/plain": [
-       "OrderedDict([('flux', Tally\n",
+       "OrderedDict([('current', Tally\n",
        "              \tID             =\t10000\n",
        "              \tName           =\t\n",
        "              \tFilters        =\t\n",
-       "                              \t\tCellFilter\t[1]\n",
+       "                              \t\tMeshFilter\t[1]\n",
        "                              \t\tEnergyFilter\t[  0.00000000e+00   6.25000000e-01   2.00000000e+07]\n",
        "              \tNuclides       =\ttotal \n",
-       "              \tScores         =\t['flux']\n",
-       "              \tEstimator      =\ttracklength), ('absorption', Tally\n",
-       "              \tID             =\t10001\n",
-       "              \tName           =\t\n",
-       "              \tFilters        =\t\n",
-       "                              \t\tCellFilter\t[1]\n",
-       "                              \t\tEnergyFilter\t[  0.00000000e+00   6.25000000e-01   2.00000000e+07]\n",
-       "              \tNuclides       =\ttotal \n",
-       "              \tScores         =\t['absorption']\n",
+       "              \tScores         =\t['current']\n",
        "              \tEstimator      =\ttracklength)])"
       ]
      },
@@ -444,7 +444,7 @@
     }
    ],
    "source": [
-    "absorption.tallies"
+    "current.tallies"
    ]
   },
   {
@@ -476,6 +476,9 @@
     "\n",
     "# Add scattering tallies to the tallies file\n",
     "tallies_file += dif_coef.tallies.values()\n",
+    "\n",
+    "# Add scattering tallies to the tallies file\n",
+    "tallies_file += current.tallies.values()\n",
     "\n",
     "# Export to \"tallies.xml\"\n",
     "tallies_file.export_to_xml()"
@@ -529,7 +532,7 @@
       "           License | http://openmc.readthedocs.io/en/latest/license.html\n",
       "           Version | 0.8.0\n",
       "          Git SHA1 | 210af40afd6b48abb94e7fd3f4d9495dd1d9bc6b\n",
-      "         Date/Time | 2016-11-13 09:41:44\n",
+      "         Date/Time | 2016-11-13 10:57:06\n",
       "     MPI Processes | 4\n",
       "\n",
       " ===========================================================================\n",
@@ -615,20 +618,20 @@
       "\n",
       " =======================>     TIMING STATISTICS     <=======================\n",
       "\n",
-      " Total time for initialization     =  5.1617E-01 seconds\n",
-      "   Reading cross sections          =  3.1351E-01 seconds\n",
-      " Total time in simulation          =  7.4986E+00 seconds\n",
-      "   Time in transport only          =  7.2089E+00 seconds\n",
-      "   Time in inactive batches        =  7.2944E-01 seconds\n",
-      "   Time in active batches          =  6.7691E+00 seconds\n",
-      "   Time synchronizing fission bank =  2.6542E-01 seconds\n",
-      "     Sampling source sites         =  2.3220E-03 seconds\n",
-      "     SEND/RECV source sites        =  8.7700E-04 seconds\n",
-      "   Time accumulating tallies       =  2.8470E-03 seconds\n",
-      " Total time for finalization       =  1.2230E-03 seconds\n",
-      " Total time elapsed                =  8.0200E+00 seconds\n",
-      " Calculation Rate (inactive)       =  34272.7 neutrons/second\n",
-      " Calculation Rate (active)         =  14772.9 neutrons/second\n",
+      " Total time for initialization     =  7.7766E-01 seconds\n",
+      "   Reading cross sections          =  4.7825E-01 seconds\n",
+      " Total time in simulation          =  9.3930E+00 seconds\n",
+      "   Time in transport only          =  9.0619E+00 seconds\n",
+      "   Time in inactive batches        =  8.9278E-01 seconds\n",
+      "   Time in active batches          =  8.5002E+00 seconds\n",
+      "   Time synchronizing fission bank =  2.9732E-01 seconds\n",
+      "     Sampling source sites         =  2.8170E-03 seconds\n",
+      "     SEND/RECV source sites        =  1.9950E-03 seconds\n",
+      "   Time accumulating tallies       =  3.6600E-03 seconds\n",
+      " Total time for finalization       =  2.9020E-03 seconds\n",
+      " Total time elapsed                =  1.0178E+01 seconds\n",
+      " Calculation Rate (inactive)       =  28002.5 neutrons/second\n",
+      " Calculation Rate (active)         =  11764.4 neutrons/second\n",
       "\n",
       " ============================>     RESULTS     <============================\n",
       "\n",
@@ -708,7 +711,8 @@
     "total.load_from_statepoint(sp)\n",
     "absorption.load_from_statepoint(sp)\n",
     "scattering.load_from_statepoint(sp)\n",
-    "dif_coef.load_from_statepoint(sp)"
+    "dif_coef.load_from_statepoint(sp)\n",
+    "current.load_from_statepoint(sp)"
    ]
   },
   {
@@ -762,30 +766,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Multi-Group XS\n",
-      "\tReaction Type  =\ttransport\n",
-      "\tDomain Type    =\tcell\n",
-      "\tDomain ID      =\t1\n",
-      "\tCross Sections [cm^-1]:\n",
-      "            Group 1 [0.625      - 20000000.0eV]:\t9.46e-01 +/- 3.49e-01%\n",
-      "            Group 2 [0.0        - 0.625     eV]:\t3.77e-01 +/- 7.54e-01%\n",
-      "\n",
-      "\n",
-      "\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 0.     ,  0.     ,  2.66091,  2.66548,  0.     ,  0.     ,\n",
+       "        2.65998,  2.65834])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "dif_coef.print_xs()"
+    "current.get_xs()[0,0,:]"
    ]
   },
   {
