got transient solver working

--- a/docs/source/pythonapi/examples/kinetics-part-i.ipynb
+++ b/docs/source/pythonapi/examples/kinetics-part-i.ipynb
@@ -120,31 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we need to define materials that will be used in the problem. Before defining a material, we must create nuclides that are used in the material."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Instantiate some Nuclides\n",
-    "h1 = openmc.Nuclide('H1')\n",
-    "o16 = openmc.Nuclide('O16')\n",
-    "u235 = openmc.Nuclide('U235')\n",
-    "u238 = openmc.Nuclide('U238')\n",
-    "pu239 = openmc.Nuclide('Pu239')\n",
-    "zr90 = openmc.Nuclide('Zr90')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With the nuclides we defined, we will now create a material for the homogeneous medium."
+    "We will now create a material for the homogeneous medium."
    ]
   },
   {
@@ -158,12 +134,11 @@
     "# Instantiate a Material and register the Nuclides\n",
     "inf_medium = openmc.Material(name='moderator')\n",
     "inf_medium.set_density('g/cc', 5.)\n",
-    "inf_medium.add_nuclide(h1,  0.03)\n",
-    "inf_medium.add_nuclide(o16, 0.015)\n",
-    "inf_medium.add_nuclide(u235 , 0.0001)\n",
-    "inf_medium.add_nuclide(u238 , 0.007)\n",
-    "inf_medium.add_nuclide(pu239, 0.00003)\n",
-    "inf_medium.add_nuclide(zr90, 0.002)"
+    "inf_medium.add_element('H',  0.03)\n",
+    "inf_medium.add_element('O', 0.015)\n",
+    "inf_medium.add_element('U', 0.0008, enrichment=4.95)\n",
+    "inf_medium.add_nuclide('Pu239', 0.00003)\n",
+    "inf_medium.add_element('Zr', 0.002)"
    ]
   },
   {
@@ -443,8 +418,8 @@
       "         Copyright | 2011-2016 Massachusetts Institute of Technology\n",
       "           License | http://openmc.readthedocs.io/en/latest/license.html\n",
       "           Version | 0.8.0\n",
-      "          Git SHA1 | bfec44caabd479989647a33de18104805dd1ecd5\n",
-      "         Date/Time | 2016-11-15 14:02:37\n",
+      "          Git SHA1 | 25f2f5c638e4927468104d670f2f4b3125f6d91a\n",
+      "         Date/Time | 2016-11-29 11:34:47\n",
       "     MPI Processes | 1\n",
       "\n",
       " ===========================================================================\n",
@@ -581,20 +556,20 @@
       "\n",
       " =======================>     TIMING STATISTICS     <=======================\n",
       "\n",
-      " Total time for initialization     =  5.2067E-01 seconds\n",
-      "   Reading cross sections          =  3.3382E-01 seconds\n",
-      " Total time in simulation          =  2.9797E+01 seconds\n",
-      "   Time in transport only          =  2.9754E+01 seconds\n",
-      "   Time in inactive batches        =  4.2993E+00 seconds\n",
-      "   Time in active batches          =  2.5498E+01 seconds\n",
-      "   Time synchronizing fission bank =  5.2430E-03 seconds\n",
-      "     Sampling source sites         =  3.0530E-03 seconds\n",
-      "     SEND/RECV source sites        =  8.0000E-04 seconds\n",
-      "   Time accumulating tallies       =  1.5410E-03 seconds\n",
-      " Total time for finalization       =  6.8350E-03 seconds\n",
-      " Total time elapsed                =  3.0330E+01 seconds\n",
-      " Calculation Rate (inactive)       =  11629.9 neutrons/second\n",
-      " Calculation Rate (active)         =  1960.94 neutrons/second\n",
+      " Total time for initialization     =  8.4538E-01 seconds\n",
+      "   Reading cross sections          =  5.4642E-01 seconds\n",
+      " Total time in simulation          =  3.0218E+01 seconds\n",
+      "   Time in transport only          =  3.0142E+01 seconds\n",
+      "   Time in inactive batches        =  4.5565E+00 seconds\n",
+      "   Time in active batches          =  2.5662E+01 seconds\n",
+      "   Time synchronizing fission bank =  8.1390E-03 seconds\n",
+      "     Sampling source sites         =  2.9170E-03 seconds\n",
+      "     SEND/RECV source sites        =  1.7370E-03 seconds\n",
+      "   Time accumulating tallies       =  1.4950E-03 seconds\n",
+      " Total time for finalization       =  4.1800E-03 seconds\n",
+      " Total time elapsed                =  3.1074E+01 seconds\n",
+      " Calculation Rate (inactive)       =  10973.4 neutrons/second\n",
+      " Calculation Rate (active)         =  1948.43 neutrons/second\n",
       "\n",
       " ============================>     RESULTS     <============================\n",
       "\n",
@@ -605,6 +580,18 @@
       " Leakage Fraction            =  0.00000 +/-  0.00000\n",
       "\n",
       "linear solver iter 0 resid 0.00000e+00 k-eff 1.227212\n",
+      "linear solver iter 1 resid 0.00000e+00 k-eff 1.227212\n",
+      "linear solver iter 2 resid 0.00000e+00 k-eff 1.227212\n",
+      "linear solver iter 3 resid 0.00000e+00 k-eff 1.227212\n",
+      "linear solver iter 4 resid 0.00000e+00 k-eff 1.227212\n",
+      "linear solver iter 5 resid 0.00000e+00 k-eff 1.227212\n",
+      "linear solver iter 6 resid 0.00000e+00 k-eff 1.227212\n",
+      "linear solver iter 7 resid 0.00000e+00 k-eff 1.227212\n",
+      "linear solver iter 8 resid 0.00000e+00 k-eff 1.227212\n",
+      "linear solver iter 9 resid 0.00000e+00 k-eff 1.227212\n",
+      "linear solver iter 10 resid 0.00000e+00 k-eff 1.227212\n",
+      "linear solver iter 11 resid 0.00000e+00 k-eff 1.227212\n",
+      "linear solver iter 0 resid 8.18394e-17 k-eff 1.227212\n",
       "linear solver iter 1 resid 0.00000e+00 k-eff 1.227212\n",
       "linear solver iter 2 resid 0.00000e+00 k-eff 1.227212\n",
       "linear solver iter 3 resid 0.00000e+00 k-eff 1.227212\n",
